# learning-langchain

./: pyproject.toml
chroma_db/: chroma.sqlite3
fastAPI/py-1/: main.py  pyproject.toml
langchain_chains/: simple_chains.py
langchain_runnable/: runnable.py
learn_pydantic/: main.py  pyproject.toml
learn_pydantic/app/: models.py
text-splitting/: length-based.py
vector-store/: chroma-db.py
